# KapazitaetsPlanungsTool

./: .env.example  .env.prod.example  .gitignore  LICENSE  Makefile  README.md  datamodel.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schemas.py  0002_capacity_tables.py  0003_reservation_tasks.py  0004_family_group.py  0005_grant_delete_tasks.py  0006_labels.py  0007_location_extensions.py  0008_room_bed_validity.py  0009_notbett_extension.py  0010_reservation_confirmed_at.py  0011_ankunftsbereich.py  0012_suggested_bed_id.py  0013_wartebereich.py  0014_audit_extended.py  0015_kontingent_history.py  0016_occupants_history.py  0017_location_visibility.py  0018_label_catalog_junction_tables.py  0019_beds_bett_nummer_partial_unique.py  0020_remove_demo_data.py  0021_remove_test_data.py
backend/seeds/: demo_data.py
backend/src/: config.py  main.py
backend/src/adapters/db/: audit_service.py  capacity_repo.py  engine.py  health.py  models.py  reservation_repo.py  task_repo.py
backend/src/adapters/keycloak/: jwt.py
backend/src/api/audit/: router.py  schemas.py
backend/src/api/map/: router.py
backend/src/domain/: __init__.py
backend/src/jobs/: jobs.py  scheduler.py
backend/src/ports/: __init__.py
backend/tests/domain/: test_capacity_rules.py  test_reservation_rules.py
skos_service/: Dockerfile  pyproject.toml
skos_service/src/: main.py
skos_service/src/data/: geschlecht.json  staatsangehoerigkeit.json
(+184 files in other folders)
