[tool.poetry]
name = "bordercapcontrol-backend"
version = "0.1.0"
description = "BorderCapControl Backend API — Hexagonale FastAPI-Anwendung"
authors = ["BorderCapControl Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.2.0"
httpx = "^0.27.0"
apscheduler = ">=3.10,<4"
weasyprint = ">=62,<63"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
